ci: add env to workflow & update env example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
 WEBSITE_URL=
+
+TEST_USER_NAME=
+TEST_USER_EMAIL=
+TEST_USER_PASSWORD=
+
+TEST_ADMIN_EMAIL=
+TEST_ADMIN_PASSWORD=
+
+TEST_LAWYER_EMAIL=
+TEST_LAWYER_PASSWORD=
+
+TEST_CLIENT_EMAIL=
+TEST_CLIENT_PASSWORD=
