--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,6 +28,8 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Run auth setup
+      run: npx playwright test tests/auth.setup.ts --project=setup
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v4
